--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run tests with coverage
         run: |
           dart test --coverage=coverage
-          dart run coverage:format_coverage --lcov -o coverage/lcov.info
+          dart run coverage:format_coverage --lcov -o coverage/lcov.info --report-on lib/
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
