--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          dart test --coverage=coverage
+          dart test --coverage --no-test-assets
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
