--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,7 +19,9 @@ jobs:
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
       - name: Install dependencies
-        run: dart pub get
+        run: |
+          dart pub get
+          dart pub global activate coverage
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
@@ -31,7 +33,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          dart test --coverage=coverage
+          dart pub global run coverage:test_with_coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
